HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelDomainNotExecutionDomain/Expected.uv
//! Expected diagnostic metadata for the ParallelDomainNotExecutionDomain rejected-source specimen.

expectedDiagnostic("E-CON-0102", "diagnostics.20.ParallelBlocks")
